# qexat-skill

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  create-issue  pyproject.toml
docs/: CHANGELOG.md  README.md  pull_request_template.md
src/skill/: constants.py  issue.py  utils.py
templates/: .env
