[tool.poetry]
name = "skill"
version = "1.0.0"
description = "Allows creating skill issues. Literally."
authors = ["Qexat <contact@qexat.com>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/qexat/skill"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pick = "^2.0.2"

[tool.poetry.scripts]
create-issue = "skill.issue:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
